--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,22 +4,26 @@ version = "0.1.0"
 edition = "2021"
 
 [package.metadata.maturin]
+name = 'windows_audio_events._native'
 python-source = "python"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "windows_audio_events"
+name = "_native"
 crate-type = ["cdylib"]
 
 [dependencies]
-pyo3 = { version = "0.17.1", features = ["extension-module"] }
+pyo3 = { version = "0.17", features = ["extension-module", "anyhow"] }
 pyo3-asyncio = { version = "0.17", features = ["async-std-runtime"] }
 pyo3-log = "0.7"
 async-std = "1.12"
 log = "0.4"
+anyhow = "1.0"
+thiserror = "1.0"
+num_enum = "0.5.7"
 
 [dependencies.windows]
-version = "0.42.0"
+version = "0.43"
 features = [
   "Win32_Foundation",
   "Win32_Media_Audio",
