--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,9 @@
 requires = ["maturin>=0.13,<0.14"]
 build-backend = "maturin"
 
+[tool.maturin]
+python-source = "python"
+
 [project]
 name = "windows-audio-events"
 requires-python = ">=3.7"
@@ -11,7 +14,27 @@ classifiers = [
     "Programming Language :: Python :: Implementation :: PyPy",
 ]
 
+[project.optional-dependencies]
+tests = [
+    "pytest >= 7",
+    "black",
+    "coverage",
+]
 
+[tool.black]
+color = true
+line-length = 120
+target-version = ['py37', 'py38', 'py39', 'py310']
+skip-string-normalization = true
+skip-magic-trailing-comma = true
 
-[tool.maturin]
-python-source = "python"
+[tool.isort]
+line_length = 120
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+combine_as_imports = true
+color_output = true
+
+[tool.pytest.ini_options]
+addopts = "--tb=short"
