--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ log = "0.4"
 anyhow = "1.0"
 thiserror = "1.0"
 num_enum = "0.5.7"
+bitflags = "2.0.0-rc.1"
 
 [dependencies.windows]
 version = "0.43"
