--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "windows-audio-events"
+name = "windows-audio-control"
 version = "0.1.0"
 edition = "2021"
 
 [package.metadata.maturin]
-name = 'windows_audio_events._native'
+name = 'windows_audio_control._native'
 python-source = "python"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
