--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "maturin"
 python-source = "python"
 
 [project]
-name = "windows-audio-events"
+name = "windows-audio-control"
 requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Rust",
@@ -24,7 +24,7 @@ tests = [
 [tool.black]
 color = true
 line-length = 120
-target-version = ['py37', 'py38', 'py39', 'py310']
+target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
 skip-string-normalization = true
 skip-magic-trailing-comma = true
 
