We can now set a device as the default playback for role
And in order to make this a bit more useful:

- `collection.devices` is a dict-like object letting you look up devs by
  device id
- AudioDevice now has an `__eq__` method (that compares by device_id)
- `collection.devices()` has been renamed to `filter_devices`

The IPolicyConfig was cribbed from https://github.com/toolness/monitor-audio-sync-rs/tree/86a00df79aa7de991f5db1afe033482bb4e052cc

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ classifiers = [
 [project.optional-dependencies]
 tests = [
     "pytest >= 7",
+    "pytest-asyncio",
     "black",
     "coverage",
 ]
@@ -38,3 +39,4 @@ color_output = true
 
 [tool.pytest.ini_options]
 addopts = "--tb=short"
+asyncio_mode="auto"
