--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "maturin"
 python-source = "python"
 
 [project]
-name = "windows-audio-events"
+name = "windows-audio-control"
 requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Rust",
@@ -17,6 +17,7 @@ classifiers = [
 [project.optional-dependencies]
 tests = [
     "pytest >= 7",
+    "pytest-asyncio",
     "black",
     "coverage",
 ]
@@ -24,7 +25,7 @@ tests = [
 [tool.black]
 color = true
 line-length = 120
-target-version = ['py37', 'py38', 'py39', 'py310']
+target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
 skip-string-normalization = true
 skip-magic-trailing-comma = true
 
@@ -38,3 +39,4 @@ color_output = true
 
 [tool.pytest.ini_options]
 addopts = "--tb=short"
+asyncio_mode="auto"
